--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.4.10",
     "axios": "^1.2.1",
@@ -66,7 +67,7 @@
     "eslint-plugin-react": "^7.32.2",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^4.9.4"
   },
   "eslintConfig": {
     "extends": "universe/native"
