--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modalize": "^2.1.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.7",
-    "react-native-webview": "^13.3.1"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
