--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.2.1",
     "expo": "~49.0.2",
     "expo-camera": "~13.4.2",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
     "expo-localization": "~14.3.0",
     "expo-location": "~16.1.0",
     "expo-notifications": "~0.20.1",
