--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build_apk": "eas build -p android --profile preview",
-    "build_all": "eas build --platform all",
-    "build_android": "eas build --platform android"
+    "build_dev_android": "eas build --profile development --platform android",
+    "build_android_aab": "eas build --platform android"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
@@ -18,8 +18,10 @@
     "@react-native-community/netinfo": "9.3.10",
     "@react-native-picker/picker": "2.4.10",
     "axios": "^1.2.1",
+    "date-fns": "^2.30.0",
     "expo": "~49.0.2",
     "expo-camera": "~13.4.2",
+    "expo-dev-client": "~2.4.8",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-localization": "~14.3.0",
@@ -37,13 +39,14 @@
     "react-native": "0.72.3",
     "react-native-confirmation-code-field": "^7.3.1",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-maps": "^1.7.1",
     "react-native-modalize": "^2.1.1",
     "react-native-phone-number-input": "^2.1.0",
+    "react-native-pure-loaders": "^1.0.12",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-maps": "^1.7.1",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.7",
     "react-native-webview": "13.2.2"
