--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
+    "expo-font": "^11.4.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "native-base": "^3.4.28",
