--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build_android_aab": "eas build --platform android"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/netinfo": "9.3.10",
@@ -22,16 +23,16 @@
     "expo": "~49.0.2",
     "expo-camera": "~13.4.2",
     "expo-dev-client": "~2.4.8",
+    "expo-font": "~11.4.0",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-localization": "~14.3.0",
     "expo-location": "~16.1.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "^14.2.1",
-    "expo-splash-screen": "~0.20.5",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
-    "expo-font": "^11.4.1",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "native-base": "^3.4.28",
