--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-modalize": "^2.1.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-pure-loaders": "^1.0.12",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
