--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start --clear",
+    "start": "expo r -c",
     "start_ofline": "expo start --offline",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -30,7 +30,6 @@
     "expo-location": "~16.1.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "^14.2.1",
-    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
     "mobx": "^6.6.1",
@@ -52,7 +51,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "^0.19.7",
-    "react-native-webview": "13.2.2"
+    "react-native-webview": "13.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
