--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo r -c",
+    "start_r": "expo r -c",
+    "start": "npx expo start",
     "start_ofline": "expo start --offline",
     "android": "expo start --android",
     "ios": "expo start --ios",
