--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "axios": "^1.2.1",
     "date-fns": "^2.30.0",
     "expo": "~49.0.2",
+    "expo-application": "~5.3.0",
+    "expo-auth-session": "~3.7.2",
     "expo-camera": "~13.4.2",
+    "expo-crypto": "^12.0.0",
     "expo-dev-client": "~2.4.8",
-    "expo-font": "~11.4.0",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-localization": "~14.3.0",
     "expo-location": "~16.1.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "^14.2.1",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
     "mobx": "^6.6.1",
@@ -51,7 +54,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
-    "react-native-web": "^0.19.7",
+    "react-native-web": "~0.18.9",
     "react-native-webview": "13.5.1"
   },
   "devDependencies": {
