--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "date-fns": "^2.30.0",
     "expo": "~49.0.2",
     "expo-application": "~5.3.0",
-    "expo-auth-session": "~3.7.2",
+    "expo-auth-session": "~5.0.2",
     "expo-camera": "~13.4.2",
-    "expo-crypto": "^12.0.0",
+    "expo-crypto": "~12.4.1",
     "expo-dev-client": "~2.4.8",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
@@ -33,7 +33,6 @@
     "expo-location": "~16.1.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "^14.2.1",
-    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.2.9",
     "mobx": "^6.6.1",
