--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-country-flag": "^2.0.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.1",
