fix comment (step 6)

--- a/app.json
+++ b/app.json
@@ -53,7 +53,7 @@
         "projectId": "6a70ae27-2a77-4f70-8ecc-f612508b268d"
       }
     },
-    "owner": "swash_1111",
+    "owner": "nick_111122",
     "scheme": "swash",
     "plugins": [
       "expo-localization"
