--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
       "**/*"
     ],
     "ios": {
+      "googleServicesFile": "./google-services.json",
       "userInterfaceStyle": "light",
       "supportsTablet": true,
       "infoPlist": {
@@ -27,15 +28,16 @@
       "config": {
         "googleMapsApiKey": "AIzaSyD-3PKe63YHjDDaxjVahTekuyvvOFfwKp4"
       },
-      "bundleIdentifier": "com.nick.auth"
+      "bundleIdentifier": "com.nick.swash"
     },
     "android": {
+      "googleServicesFile": "./google-services.json",
       "userInterfaceStyle": "light",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.nick.auth",
+      "package": "com.nick.swash",
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyD-3PKe63YHjDDaxjVahTekuyvvOFfwKp4"
@@ -56,9 +58,10 @@
       }
     },
     "owner": "nick_111122",
-    "scheme": "swash",
+    "scheme": "com.nick.swash",
     "plugins": [
-      "expo-localization"
+      "expo-localization",
+      "@react-native-google-signin/google-signin"
     ]
   }
 }
