--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
     "expo-localization": "~14.3.0",
-    "expo-location": "~16.1.0",
+    "expo-location": "^16.3.0",
     "expo-notifications": "~0.20.1",
     "expo-permissions": "^14.2.1",
     "expo-status-bar": "~1.6.0",
@@ -45,6 +45,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.3",
     "react-native-confirmation-code-field": "^7.3.1",
+    "react-native-country-flag": "^2.0.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-google-places-autocomplete": "^2.5.1",
@@ -61,7 +62,6 @@
     "react-native-webview": "13.5.1"
   },
   "devDependencies": {
-    "expo-dev-client": "~2.4.8",
     "@babel/core": "^7.20.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
@@ -76,6 +76,7 @@
     "eslint-config-universe": "^11.2.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "expo-dev-client": "~2.4.8",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
     "typescript": "^4.9.4"
