--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-native-picker/picker": "2.4.10",
     "axios": "^1.2.1",
+    "expo-auth-session": "~5.0.2",
     "date-fns": "^2.30.0",
     "expo": "~49.0.2",
     "expo-application": "~5.3.0",
@@ -36,7 +37,7 @@
     "expo-notifications": "~0.20.1",
     "expo-permissions": "^14.2.1",
     "expo-status-bar": "~1.6.0",
-    "expo-web-browser": "^12.5.0",
+    "expo-web-browser": "~12.3.2",
     "formik": "^2.2.9",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
@@ -68,6 +69,7 @@
     "@types/axios": "^0.14.0",
     "@types/react": "~18.2.14",
     "@types/react-native": "^0.71.6",
+    "expo-notifications": "0.23.0",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
     "babel-eslint": "^10.1.0",
