--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start_r": "expo r -c",
-    "start": "npx expo start",
+    "start_dev": "expo start --dev-client",
+    "start": "expo start",
     "start_ofline": "expo start --offline",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -14,6 +14,7 @@
     "build_android_aab": "npx eas build --platform android"
   },
   "dependencies": {
+    "@notifee/react-native": "7.7.1",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.18.2",
